png support added
--HG--
branch : libimago2
extra : convert_revision : svn%3Aa63aed3b-50f6-46c9-a87c-b89ceb2d5030/libimago2%4042

--- a/Makefile.in
+++ b/Makefile.in
@@ -53,3 +53,17 @@ clean:
 .PHONY: distclean
 distclean:
 	rm -f $(obj) $(lib_so) $(lib_a) Makefile src/modules.c
+
+.PHONY: install
+install: $(lib_so) $(lib_a)
+	test -d $(PREFIX)/include || mkdir -p $(PREFIX)/include
+	test -d $(PREFIX)/lib || mkdir -p $(PREFIX)/lib
+	cp src/imago2.h $(PREFIX)/include/imago2.h
+	cp $(lib_so) $(PREFIX)/lib/$(lib_so)
+	cp $(lib_a) $(PREFIX)/lib/$(lib_a)
+
+.PHONY: uninstall
+uninstall:
+	rm -f $(PREFIX)/include/imago2.h
+	rm -f $(PREFIX)/lib/$(lib_so)
+	rm -f $(PREFIX)/lib/$(lib_a)
