fixed the install rule in libimago2 which would fail on macosx
--HG--
branch : libimago2
extra : convert_revision : svn%3Aa63aed3b-50f6-46c9-a87c-b89ceb2d5030/libimago2%4077

--- a/Makefile.in
+++ b/Makefile.in
@@ -62,7 +62,11 @@ install: $(lib_so) $(lib_a)
 	cp src/imago2.h $(PREFIX)/include/imago2.h
 	cp $(lib_so) $(PREFIX)/lib/$(lib_so)
 	cp $(lib_a) $(PREFIX)/lib/$(lib_a)
-	[ -n "$(solink)" ] && cd $(PREFIX)/lib && rm -f $(solink) && ln -s $(lib_so) $(solink)
+	[ -n "$(solink)" ] \
+		&& cd $(PREFIX)/lib \
+		&& rm -f $(solink) \
+		&& ln -s $(lib_so) $(solink) \
+		|| true
 
 .PHONY: uninstall
 uninstall:
