--- a/Makefile.in
+++ b/Makefile.in
@@ -57,20 +57,23 @@ distclean:
 
 .PHONY: install
 install: $(lib_so) $(lib_a)
-	test -d $(PREFIX)/include || mkdir -p $(PREFIX)/include
-	test -d $(PREFIX)/lib || mkdir -p $(PREFIX)/lib
-	cp src/imago2.h $(PREFIX)/include/imago2.h
-	cp $(lib_so) $(PREFIX)/lib/$(lib_so)
-	cp $(lib_a) $(PREFIX)/lib/$(lib_a)
+	mkdir -p $(DESTDIR)$(PREFIX)/include $(DESTDIR)$(PREFIX)/lib
+	cp src/imago2.h $(DESTDIR)$(PREFIX)/include/imago2.h
+	cp $(lib_so) $(DESTDIR)$(PREFIX)/lib/$(lib_so)
+	cp $(lib_a) $(DESTDIR)$(PREFIX)/lib/$(lib_a)
 	[ -n "$(solink)" ] \
-		&& cd $(PREFIX)/lib \
-		&& rm -f $(solink) \
-		&& ln -s $(lib_so) $(solink) \
+		&& cd $(DESTDIR)$(PREFIX)/lib \
+		&& rm -f $(solink) $(soname) \
+		&& ln -s $(lib_so) $(soname) \
+		&& ln -s $(soname) $(solink) \
 		|| true
 
 .PHONY: uninstall
 uninstall:
-	rm -f $(PREFIX)/include/imago2.h
-	rm -f $(PREFIX)/lib/$(lib_so)
-	rm -f $(PREFIX)/lib/$(lib_a)
-	rm -f $(PREFIX)/lib/$(solink)
+	rm -f $(DESTDIR)$(PREFIX)/include/imago2.h
+	rm -f $(DESTDIR)$(PREFIX)/lib/$(lib_so)
+	rm -f $(DESTDIR)$(PREFIX)/lib/$(lib_a)
+	[ -n "$(solink)" ] \
+		&& rm -f $(DESTDIR)$(PREFIX)/lib/$(solink) \
+		&& rm -f $(DESTDIR)$(PREFIX)/lib/$(soname) \
+		|| true
