--- a/Makefile.in
+++ b/Makefile.in
@@ -15,8 +15,8 @@ ifeq ($(shell uname -s), Darwin)
 	lib_so = libimago.dylib
 	shared = -dynamiclib
 	# add macports and fink dirs to the include and lib paths
-	incdir += -I/opt/local/include -I/sw/local/include
-	libdir += -L/opt/local/lib -L/sw/local/lib
+	incdir += -I/opt/local/include -I/sw/local/include -I/usr/X11R6/include
+	libdir += -L/opt/local/lib -L/sw/local/lib -L/usr/X11R6/lib
 else
 	soname = libimago.so.$(somajor)
 	lib_so = $(soname).$(sominor)
