--- a/imago.vcxproj.filters
+++ b/imago.vcxproj.filters
@@ -51,4 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="imago.def">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
