--- a/imago.vcxproj.filters
+++ b/imago.vcxproj.filters
@@ -7,11 +7,11 @@
     </Filter>
     <Filter Include="Header Files">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hpp;hxx;hm;inl;inc;xsd</Extensions>
+      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
     <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
+      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -30,13 +30,16 @@
     <ClCompile Include="src\file_rgbe.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\file_tga.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="src\ftype_module.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\imago2.c">
+    <ClCompile Include="src\imago_gl.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\imago_gl.c">
+    <ClCompile Include="src\imago2.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\modules.c">
@@ -53,6 +56,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="imago.def">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="imago-dbg.def">
       <Filter>Source Files</Filter>
     </None>
   </ItemGroup>
