indexed PNG output

--- a/examples/glimago/Makefile
+++ b/examples/glimago/Makefile
@@ -2,10 +2,10 @@ src = $(wildcard src/*.c)
 obj = $(src:.c=.o)
 bin = glimago
 
-CFLAGS = -pedantic -Wall -g
-LDFLAGS = -limago -lGL -lglut
+CFLAGS = -pedantic -Wall -g -I../../src
+LDFLAGS = ../../libimago.a -lGL -lglut -ldl -lpng -lz -ljpeg
 
-$(bin): $(obj)
+$(bin): $(obj) ../../libimago.a
 	$(CC) -o $@ $(obj) $(LDFLAGS)
 
 .PHONY: clean
